Added the option to reject an address and then a new one added

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -67,6 +67,10 @@ $path: "/public/images/";
     margin-bottom: 30px;
 }
 
+.smallMarginBottom {
+    margin-bottom: 10px;
+}
+
 .paddingBottom {
     padding-bottom: 30px;
 }
