--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -3,7 +3,7 @@ include ../proposedAddress/includes/addressDetail
 
 block content
 
-    -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress.addresses[addressIndex] : {}
+    -var address = data.addresses && data.addresses[0] || {}
 
     div.pure-g.pure-u-1
         div.borderBottomLight
@@ -21,7 +21,7 @@ block content
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="nomisId" value=nomisId || '')
-            input(type="hidden" name="addressIndex" value=addressIndex || '')
+            input(type="hidden" name="addressIndex" value=address.index || '')
             div.pure-g.largePaddingBottom
                 div.pure-u-1.pure-u-sm-5-12.pure-g
                     div.form-group.inline
