--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -3,7 +3,7 @@ include ../proposedAddress/includes/addressDetail
 
 block content
 
-    -var address = data.addresses && data.addresses[0] || {}
+    -var address = data || {}
 
     div.pure-g.pure-u-1
         div.borderBottomLight
