--- a/server/views/review/includes/curfewAddress.pug
+++ b/server/views/review/includes/curfewAddress.pug
@@ -1,6 +1,6 @@
 h2#curfewAddressDetails.heading-medium.borderBottomLightThick.separatorTitle Proposed curfew address
 
--var address = data.proposedAddress.curfewAddress.addresses[0]
+-var address = data.proposedAddress.curfewAddress
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
