--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -14,7 +14,7 @@ block content
     form(method="post" action=submitPath)
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
-        div.borderBottomLight.paddingBottom.largeMarginBottom
+        div.paddingBottom.largeMarginBottom
             h3.heading-medium Preferred address
             +addressForm(0)
 
