--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -9,7 +9,7 @@ div.taskListItem.submit
                 else
                     | Tasks not yet complete
             else
-                | #{licenceStatus.stage}
+                | #{statusLabel}
         div.pure-u-1-4
             if licenceStatus.stage === 'PROCESSING_RO'
                 //- && allowedTransitions.roToCa
