--- a/server/views/taskList/caSubmitTask.pug
+++ b/server/views/taskList/caSubmitTask.pug
@@ -9,7 +9,7 @@ div.largeMarginBottom.borderTop
                 if allowedTransitions.caToDm
                     | Ready to submit
                 else if licenceStatus.decisions.postponed
-                    | Licence postponed
+                    | HDC application postponed
                 else
                     | Tasks not yet complete
             else
