--- a/server/views/taskList/postponementTask.pug
+++ b/server/views/taskList/postponementTask.pug
@@ -6,7 +6,7 @@ div.largeMarginBottom.borderTop
     div.pure-g
         div.pure-u-1-2
             if licenceStatus.decisions.postponed
-                | Licence postponed
+                | HDC application postponed
             else
                 | Use this to indicate that the process is postponed while any risk management planning actions remain outstanding
         div.pure-u-1-4
