--- a/server/views/licenceConditions/includes/alcoholLimit.pug
+++ b/server/views/licenceConditions/includes/alcoholLimit.pug
@@ -1,2 +1,2 @@
 label(for='alcoholLimit') Limit
-input(type='text' name='alcoholLimit' id='alcoholLimit' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.alcoholLimit)
+input(type='text' name='alcoholLimit' id='alcoholLimit' class='form-control' value=condition.user_submission && condition.user_submission.alcoholLimit)
