--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -1,4 +1,4 @@
-- var formItem = condition.USER_INPUT.value
+- var formItem = condition.user_input
 
     div.form-group
         if formItem === 'appointmentName'
