--- a/server/views/licenceConditions/includes/mentalHealthName.pug
+++ b/server/views/licenceConditions/includes/mentalHealthName.pug
@@ -1,4 +1,4 @@
 div.pure-g
     div.pure-u-3-4
         label(for='mentalHealthName') Name
-        input(type='text' name='mentalHealthName' id='mentalHealthName' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.mentalHealthName)
+        input(type='text' name='mentalHealthName' id='mentalHealthName' class='form-control' value=condition.user_submission && condition.user_submission.mentalHealthName)
