--- a/server/views/licenceConditions/includes/noContactOffenders.pug
+++ b/server/views/licenceConditions/includes/noContactOffenders.pug
@@ -1,5 +1,5 @@
 label(for='noContactOffenders') Names of offenders/individuals
 textarea(name='noContactOffenders' id='noContactOffenders' class='form-control' rows='4')
-    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.noContactOffenders
-        |#{condition.USER_SUBMISSION.noContactOffenders}
+    if condition.user_submission && condition.user_submission.noContactOffenders
+        |#{condition.user_submission.noContactOffenders}
 
