--- a/server/views/licenceConditions/includes/notInSightOf.pug
+++ b/server/views/licenceConditions/includes/notInSightOf.pug
@@ -1,4 +1,4 @@
 label(for='notInSightOf') Restricted places
 textarea(name='notInSightOf' id='notInSightOf' class='form-control' rows='2')
-    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.notInSightOf
-        | #{condition.USER_SUBMISSION.notInSightOf}
+    if condition.user_submission && condition.user_submission.notInSightOf
+        | #{condition.user_submission.notInSightOf}
