--- a/server/views/licenceConditions/includes/vehicleDetails.pug
+++ b/server/views/licenceConditions/includes/vehicleDetails.pug
@@ -1,4 +1,4 @@
 label(for='vehicleDetails') Vehicle details
 textarea(name='vehicleDetails' id='vehicleDetails' class='form-control' rows='2')
-    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.vehicleDetails
-        | #{condition.USER_SUBMISSION.vehicleDetails}
+    if condition.user_submission && condition.user_submission.vehicleDetails
+        | #{condition.user_submission.vehicleDetails}
