--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -16,7 +16,7 @@ block content
 
             ol.numberedList
                 for condition in conditions
-                    li.midPaddingBottom #{condition.TEXT.value}
+                    li.midPaddingBottom #{condition.text}
 
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
