--- a/server/views/licenceConditions/includes/appointmentName.pug
+++ b/server/views/licenceConditions/includes/appointmentName.pug
@@ -1,4 +1,4 @@
 div.pure-g
     div.pure-u-3-4
       label(for='appointmentName') Name
-      input(type='text' name='appointmentName' id='appointmentName' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.appointmentName)
+      input(type='text' name='appointmentName' id='appointmentName' class='form-control' value=condition.user_submission && condition.user_submission.appointmentName)
