--- a/server/views/licenceConditions/includes/confinedDetails.pug
+++ b/server/views/licenceConditions/includes/confinedDetails.pug
@@ -1,20 +1,20 @@
 div.pure-g.paddingBottom
     div.pure-u-1-2.padRight7
         label(for='confinedTo') To
-        input(type='text' name='confinedTo' id='confinedTo' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.confinedTo)
+        input(type='text' name='confinedTo' id='confinedTo' class='form-control' value=condition.user_submission && condition.user_submission.confinedTo)
     div.pure-u-1-2.padLeft7
         label(for='confinedFrom') From
-        input(type='text' name='confinedFrom' id='confinedFrom' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.confinedFrom)
+        input(type='text' name='confinedFrom' id='confinedFrom' class='form-control' value=condition.user_submission && condition.user_submission.confinedFrom)
 
 div.inline
     div.multiple-choice
-        input(id='confinedReviewWeekly' type='radio' name='confinedReviewFrequency' value='Weekly' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.confinedReviewFrequency === 'Weekly')
+        input(id='confinedReviewWeekly' type='radio' name='confinedReviewFrequency' value='Weekly' checked=condition.user_submission && condition.user_submission.confinedReviewFrequency === 'Weekly')
         label(for='confinedReviewWeekly') Weekly
 
     div.multiple-choice
-        input(id='confinedReviewMonthly' type='radio' name='confinedReviewFrequency' value='Monthly' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.confinedReviewFrequency === 'Monthly')
+        input(id='confinedReviewMonthly' type='radio' name='confinedReviewFrequency' value='Monthly' checked=condition.user_submission && condition.user_submission.confinedReviewFrequency === 'Monthly')
         label(for='confinedReviewMonthly') Monthly
 
     div.multiple-choice
-        input(id='confinedReviewOther' type='radio' name='confinedReviewFrequency' value='Other' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.confinedReviewFrequency === 'Other')
+        input(id='confinedReviewOther' type='radio' name='confinedReviewFrequency' value='Other' checked=condition.user_submission && condition.user_submission.confinedReviewFrequency === 'Other')
         label(for='confinedReviewOther') Other
