--- a/server/views/licenceConditions/includes/exclusionArea.pug
+++ b/server/views/licenceConditions/includes/exclusionArea.pug
@@ -1,4 +1,4 @@
 label(for='exclusionArea') Exclusion area
 textarea(name='exclusionArea' id='exclusionArea' class='form-control' rows='3')
-    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.exclusionArea
-        | #{condition.USER_SUBMISSION.exclusionArea}
+    if condition.user_submission && condition.user_submission.exclusionArea
+        | #{condition.user_submission.exclusionArea}
