--- a/server/views/licenceConditions/includes/intimateGender.pug
+++ b/server/views/licenceConditions/includes/intimateGender.pug
@@ -1,12 +1,12 @@
 div.inline
     div.multiple-choice
-        input(id='radioWomen' type='radio' name='intimateGender' value='Women' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.intimateGender === 'Women')
+        input(id='radioWomen' type='radio' name='intimateGender' value='Women' checked=condition.user_submission && condition.user_submission.intimateGender === 'Women')
         label(for='radioWomen') Women
 
     div.multiple-choice
-        input(id='radioMen' type='radio' name='intimateGender' value='Men' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.intimateGender === 'Men')
+        input(id='radioMen' type='radio' name='intimateGender' value='Men' checked=condition.user_submission && condition.user_submission.intimateGender === 'Men')
         label(for='radioMen') Men
 
     div.multiple-choice
-        input(id='radioWomenOrMen' type='radio' name='intimateGender' value='Women or men' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.intimateGender === 'Women or men')
+        input(id='radioWomenOrMen' type='radio' name='intimateGender' value='Women or men' checked=condition.user_submission && condition.user_submission.intimateGender === 'Women or men')
         label(for='radioWomenOrMen') Women or men
