--- a/server/views/licenceConditions/includes/noCurrencyQuantity.pug
+++ b/server/views/licenceConditions/includes/noCurrencyQuantity.pug
@@ -1,3 +1,3 @@
 div.inlineFormItem
     label(for='cashQuantity') Quantity
-    input(type='number' name='cashQuantity' id='cashQuantity' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.cashQuantity)
+    input(type='number' name='cashQuantity' id='cashQuantity' class='form-control' value=condition.user_submission && condition.user_submission.cashQuantity)
